--- a/manifest.json
+++ b/manifest.json
@@ -54,10 +54,20 @@
 
 	},
 	"mp-weixin": { /* 小程序特有相关 */
-		"appid": "",
+		"appid": "wx51b9120163c6baf6",
 		"setting": {
 			"urlCheck": false
 		},
-		"usingComponents": true
+		"usingComponents": true,
+		"condition": { //模式配置，仅开发期间生效
+			"current": 0, //当前激活的模式（list 的索引项）
+			"list": [{
+					"name": "swiper", //模式名称
+					"path": "pages/index/index", //启动页面，必选
+					"query": "interval=4000&autoplay=false" //启动参数，在页面的onLoad函数里面得到。
+				}
+				
+			]
+		}
 	}
 }
